Update machine learning algoritm k-mean with python.ipynb

--- a/Manchine Learning algoritm k-mean dgn python/machine learning algoritm k-mean with python.ipynb
+++ b/Manchine Learning algoritm k-mean dgn python/machine learning algoritm k-mean with python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# features menyimpan numpy array 2 dimensi, true label berisikan label cluster dari setiap data\n",
+    "#make_lobs berfungsi untuk membuat sampel data secara acak\n",
     "features, true_labels = make_blobs(\n",
     "    n_samples=200, centers=3,\n",
     "    cluster_std=2,\n",
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,27 +54,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#transform filter\n",
     "standar_scalrt = StandardScaler()\n",
     "scaled_features = standar_scalrt.fit_transform(features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#mengimplementasikan cluster kmeans dengan membagi data ke dalam 3 cluster\n",
     "kmeans =KMeans(n_clusters=3, random_state=24)\n",
+    "#menlakukan penghitungan cluster center, kemudian melakukan prediksi\n",
     "result = kmeans.fit_predict(scaled_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +93,9 @@
    ],
    "source": [
     "sns.scatterplot(x=scaled_features[:, 0], y=scaled_features[:, 1], hue=result)\n",
-    "sns.scatterplot(x = kmeans.cluster_centers_[:, 0], y = kmeans.cluster_centers_[:, 1],\n",
+    "sns.scatterplot(x =\n",
+    "    kmeans.cluster_centers_[:, 0], \n",
+    "    y = kmeans.cluster_centers_[:, 1],\n",
     "    s=200, markers='*', color='blue')\n",
     "plt.legend(loc='lower left')\n",
     "plt.show()"
