--- a/Manchine Learning algoritm k-mean dgn python/machine learning algoritm k-mean with python.ipynb
+++ b/Manchine Learning algoritm k-mean dgn python/machine learning algoritm k-mean with python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,70 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer_id  frequency  recency     monetary\n",
+      "0        12346          1       48  27904840000\n",
+      "1        12347          2       40    423420000\n",
+      "2        12348          2       41    414092000\n",
+      "3        12350          1       33    119478000\n",
+      "4        12352          3        6    449984000\n",
+      "5        12356          1       48    809968000\n",
+      "6        12359          2       28    842749000\n",
+      "7        12361          1       10     67602000\n",
+      "8        12362          1       18    170512000\n",
+      "9        12365          2       14    226652000\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('RFM_customer.csv', encoding='utf-8')\n",
+    "print(data.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1625, 4)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1625 entries, 0 to 1624\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype\n",
+      "---  ------       --------------  -----\n",
+      " 0   customer_id  1625 non-null   int64\n",
+      " 1   frequency    1625 non-null   int64\n",
+      " 2   recency      1625 non-null   int64\n",
+      " 3   monetary     1625 non-null   int64\n",
+      "dtypes: int64(4)\n",
+      "memory usage: 50.9 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.shape)\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +157,154 @@
     "    s=200, markers='*', color='blue')\n",
     "plt.legend(loc='lower left')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer_id  frequency  recency     monetary\n",
+      "0        12346          1       48  27904840000\n",
+      "1        12347          2       40    423420000\n",
+      "2        12348          2       41    414092000\n",
+      "3        12350          1       33    119478000\n",
+      "4        12352          3        6    449984000\n",
+      "5        12356          1       48    809968000\n",
+      "6        12359          2       28    842749000\n",
+      "7        12361          1       10     67602000\n",
+      "8        12362          1       18    170512000\n",
+      "9        12365          2       14    226652000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1625, 4)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1625 entries, 0 to 1624\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype\n",
+      "---  ------       --------------  -----\n",
+      " 0   customer_id  1625 non-null   int64\n",
+      " 1   frequency    1625 non-null   int64\n",
+      " 2   recency      1625 non-null   int64\n",
+      " 3   monetary     1625 non-null   int64\n",
+      "dtypes: int64(4)\n",
+      "memory usage: 50.9 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.shape)\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        customer_id    frequency      recency      monetary\n",
+      "count   1625.000000  1625.000000  1625.000000  1.625000e+03\n",
+      "mean   15261.415385     1.910769    36.455385  3.321584e+08\n",
+      "std     1745.556403     2.111145    26.934570  1.140958e+09\n",
+      "min    12346.000000     1.000000     1.000000  3.100000e+05\n",
+      "25%    13764.000000     1.000000    13.000000  7.520200e+07\n",
+      "50%    15221.000000     1.000000    32.000000  1.380670e+08\n",
+      "75%    16805.000000     2.000000    54.000000  2.902490e+08\n",
+      "max    18283.000000    34.000000    90.000000  2.790484e+10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#menampilkan data pada data frame\n",
+    "print(data.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.isnull().any().any())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   frequency  recency     monetary\n",
+      "0          1       48  27904840000\n",
+      "1          2       40    423420000\n",
+      "2          2       41    414092000\n",
+      "3          1       33    119478000\n",
+      "4          3        6    449984000\n"
+     ]
+    }
+   ],
+   "source": [
+    "RFM_km = data.drop(['customer_id'], axis=1)\n",
+    "print(RFM_km.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Frequency  Monetary    Recency\n",
+      "0  -0.431543  0.428749  24.173698\n",
+      "1   0.042280  0.131641   0.080011\n",
+      "2   0.042280  0.168780   0.071833\n",
+      "3  -0.431543 -0.128328  -0.186463\n",
+      "4   0.516102 -1.131065   0.103301\n"
+     ]
+    }
+   ],
+   "source": [
+    "standar_scaler = StandardScaler()\n",
+    "RFM_standardized = standar_scaler.fit_transform(RFM_km)\n",
+    "RFM_standardized = pd.DataFrame(RFM_standardized)\n",
+    "RFM_standardized.columns = ['Frequency', 'Monetary', 'Recency']\n",
+    "print(RFM_standardized.head())"
    ]
   }
  ],
